--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,11 @@
+.todocontainer{
+border-style:solid;
+border-color: rgb(0, 0, 0);
 
-/* 
+margin-top: 200px;
+margin-left: 600px;
+margin-right: 600px;
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
 
-*/
+}
+
